# aba_flooding

./: .gitignore  ABAFloodNotebook.ipynb  LICENSE  One_notebook_to_rule_them_all.ipynb  README.md  RegnDataAPI.ipynb  TimeSeries.ipynb  Untitled-1.ipynb  fixed-spinner.html  imagespinner.html  model_end.ckpt  pyproject.toml  requirements.txt  tasks.py  thebeststation.py
ABAProject/Scripts/: deepCox_one_station_fixed5_best.py  deepCox_one_station_fixed6_trying_train_test.py  deepCox_one_station_fixed_train_test_works.py
data/: Perculation_data.xlsx  Perculation_rate.xlsx
dockerfiles/: api.dockerfile  train.dockerfile
docs/: README.md  index.html  mkdocs.yaml
docs/assets/css/: style.css
docs/source/: index.md
models/: deep_cox_model.pth
notebooks/: API_integ.ipynb  RegnDataAPI.ipynb  deepCox.py  model_testing.py  survival_analysis.ipynb
src/aba_flooding/: Little_stats.py  Visualize_GEOJSON_MSK.py  Viz_precipitation.py  deepCox.py  deepCox_one_station.py  dmi_api_extract.py  dmi_api_station_extract.py  dmi_process_jsons_to_parquet.py  geo_utils.py  idk_anymore.py  inspect_model.py  main.py  map.py  model.py  perculation_mapping.py  plot_tte.py  preprocess.py  sensitiviy.py  showing_station_timelines.py  station_extraction.py  test_data_prep.py  train.py  unfolder_of_truths.py  vis_geo.ipynb  vis_geo.py  visualisation_of_data.py
src/aba_flooding/old_extra_scripts/: Little_stats.py  data_prep.py  test_data_prep.py  vis_bokeh_map.ipynb  vis_geo.ipynb  vis_geo.py  vis_geopandas.py
tests/: test_data.py
