[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aba_flooding"
version = "0.0.1"
description = "Adv Business Analytics Exam Project 2025"
authors = [
  { name = "Oliver", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pytorch-forecasting>=1.3.0",
    "pytorch-lightning>=2.5.1",
    "scikit-learn>=1.6.1",
    "scikit-survival>=0.24.0",
    "scipy>=1.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "typer>=0.15.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
