[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aba_flooding"
version = "0.0.1"
description = "Adv Business Analytics Exam Project 2025"
authors = [
  { name = "Oliver", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
#dynamic = ["dependencies", "optional-dependencies"]

dependencies = [
  "geopandas>=1.0.1",
  "ipykernel>=6.29.5",
  "ipython>=9.0.2",
  "pydeck",
  "pyproj>=3.7.1",
  "scikit-learn>=1.6.1",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchvision>=0.21.0",
  "typer>=0.15.2",
]

#[tool.setuptools.dynamic]
#dependencies = {file = ["requirements.txt"]}

#[tool.setuptools.dynamic.optional-dependencies]
#dev = {file = ['requirements_dev.txt']}

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
