[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aba_flooding"
version = "0.0.1"
description = "Adv Business Analytics Exam Project 2025"
authors = [
  { name = "Oliver", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
#dynamic = ["dependencies", "optional-dependencies"]

dependencies = [
  "bokeh>=3.7.2",
  "ipykernel>=6.29.5",
  "ipython>=9.0.2",
  "lifelines>=0.30.0",
  "pycox>=0.3.0",
  "pydeck",
  "sklearn-pandas>=2.2.0",
  "shapely>=2.0.7",
  "transformers",
  "geopandas>=1.0.1",
  "torch>=2.6.0",
  "fiona>=1.10.1",
  "geopy>=2.4.1",
  "pyogrio>=0.10.0",
  "scikit-survival>=0.24.1",
]

#[tool.setuptools.dynamic]
#dependencies = {file = ["requirements.txt"]}

#[tool.setuptools.dynamic.optional-dependencies]
#dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]



[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

